add a new data field emailAddress
